--- a/templates/polls/detail.html
+++ b/templates/polls/detail.html
@@ -1,91 +1,68 @@
-<html lang="pt-BR">
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=8" />
-<meta content="pt-BR" http-equiv="Content-Language" />
-<meta name="language" content="pt-BR" />
-<meta name="distribution" content="global"/>
-
-<link rel="stylesheet" href="{{MEDIA_URL}}css/style.css" type="text/css"/>
-
-<script type="text/javascript"></script>
-
+    <style type="text/css" media="screen">
+        @import url('{{MEDIA_URL}}css/base.css');
+    </style>
 </head>
-
 <body>
-  
-		<h2>
+{% load static %}
+{{ poll.question }}
+<div class="poll_container centered"><!-- div geral que envolve o conteúdo -->
 
-		{% load static %}
+<form action="/polls/{{ poll.id }}/vote/" method="post">
 
-		{{ poll.question }}
+{% csrf_token %}
+    <div class="poll_content">
 
-		</h2>
+        <h2><i></i> Quem deve ser <strong>eliminado</strong>?</h2>
 
-		{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-	
-		
-     	<ul>
-		{% for choice in poll.choice_set.all %}
+        <!-- título geral. o <i></i> vazio faz carregar o ícone antes do texto-->
+        
+		  <h3><i></i>{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}</h3>
 
-		{{ choice.candidate }} -- {{ choice.votes }} vote{{choice.votes|pluralize }} ({{choice.percentual}} %)
-		<br>
+			{% for choice in poll.choice_set.all %}
+        	<div class="one2">
+            <h3>{{choice.candidate}}</h3>
+            <label for={{ choice.candidate }} class="selected_candidate"><!-- com jquery, adicionar class="selected_candidate" ao clicar no label -->
+                <img src={{ choice.candidate_photo.url}} />
+                <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"/>
+            </label>
+            <p>Para eliminar o <strong>{{ choice.candidate }}</strong> pelo telefone disque <strong>0800-123-001</strong> ou mande um SMS para <strong>8001</strong></p>
+        	</div>
+		  {% endfor %}
 
-		{% endfor %}
-		</ul>	
-		
-
-		<div id="form_style">
-		
-		<form action="/polls/{{ poll.id }}/vote/" method="post">
-
-		{% csrf_token %}
-
-				<table>
-				<tr>
-					<th colspan="3">Candidatos</th>
-				</tr>
-				<tr class="yellow"> 
-					{% for choice in poll.choice_set.all %}
-					<td>
-
-						<input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"/>
-
-						<label for="choice{{ forloop.counter }}">{{ choice.candidate }}</label><br />
-					    
-						<img src={{ choice.candidate_photo.url}} />
-					    
-						<br />
-					</td>
-
-					{% endfor %}
-				</tr>
-				<br>
-				</table>
+        <div class="clear">
 
 
 
+        </div>
 
-			{% if error %}
-				<div style="text-align:center;"><b>FAILURE</b></div>
-			{% endif %}
-			{% if ok %}
-				<div style="text-align:center;"><b>SUCCESS ! :)</b></div>
-			{% endif %}
-			
-			<input type="hidden" value="{{ hash }}" name="imghash">
-			<b>Text from the image</b><br />(Use CAPITAL letters)<br />
-			<input type="text" size="20" name="imgtext"><br />
-			<img src="{{MEDIA_URL}}img/{{ tempname }}"><br />
-			
+    </div>
 
-				<input type="submit" value="Vote" align="right">
-			</form>
-			</div>
-			<ul>
-			<a href="{% url polls.views.index %}">Paredões acontecendo</a><br>
-			<a href="/admin">Crie um novo paredão (admin role)</a>
-			</ul>			
+
+
+    {% if error %}
+        <div style="text-align:center;"><b>As letras não conincidem. Tente Novamente</b></div>
+    {% endif %}
+    <input type="hidden" style="text-align:center;" value="{{ hash }}" name="imghash">
+    <div style="text-align:center;"><b>Insira as letras da imagem abaixo</b>
+    <br /><br />
+    <input type="text" style="text-align:center;" size="20" name="imgtext"><br />
+    <img src="{{MEDIA_URL}}img/{{ tempname }}" style="text-align:center;"><br />
+    </div> 
+
+    <div class="poll_submit"><!-- div para submeter voto. Tanto faz usar link, input ou button - todos irão se ajustar ao desing -->
+
+ 
+    
+    
+        <!--a href="index02.html">Envie seu voto agora</a>
+        <!--button>Envie seu voto agora</button-->
+        <input type="submit" value="Envie seu voto agora" />
+    </div>
+
+</form>
+<div class="close_poll"><a href="#">Fechar</a></div>
+</div><!-- poll_container -->
 </body>
 </html>
-
