--- a/templates/polls/detail.html
+++ b/templates/polls/detail.html
@@ -3,29 +3,6 @@
 <style type="text/css" media="screen">
     @import url('{{MEDIA_URL}}css/base.css');
 </style>
-
-<script type="text/javascript">
-function setCheckedValue(radio_obj, new_value) {
-    alert('chegou')
-    if(!radio_obj)
-        return;
-    var radioLength = radio_obj.length;
-    if(radioLength == undefined) {
-        radio_obj.checked = (radio_obj.value == new_value.toString());
-        alert(radio_obj)
-        alert(radio_obj.checked)
-        return;
-    }
-    for(var i = 0; i < radioLength; i++) {
-        radio_obj[i].checked = false;
-        if(radio_obj[i].value == new_value.toString()) {
-            radio_obj[i].checked = true;
-            alert(radio_obj[i])
-            alert(radio_obj[i].checked)
-        }
-    }
-}
-</script>
 </head>
 
 <body>
@@ -52,10 +29,11 @@ function setCheckedValue(radio_obj, new_value) {
             {% if forloop.counter  == 1 %}
         	<div class="one2 first">
             <h3>{{choice.candidate}}</h3>
-            <label for={{ choice.candidate }} ><!-- com jquery, adicionar class="selected_candidate" ao clicar no label -->
+            
+            <label for={{ choice.id }} ><!-- com jquery, adicionar class="selected_candidate" ao clicar no label -->
                 <img src={{ choice.candidate_photo.url}} />
                 <!--input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"/-->
-                <input type="radio" name="vote_id" id="{{ choice.id }}" value="{{ choice.id }}" onClick="setCheckedValue(document.forms['radio_bbb'].elements['vote_id'], {{ choice.id }});" />
+                <input type="radio" name="vote_id" id="{{ choice.id }}" value="{{ choice.id }}" />
             </label>
 
             <p>Para eliminar o <strong>{{ choice.candidate }}</strong> pelo telefone disque <strong>0800-123-001</strong> ou mande um SMS para <strong>8001</strong></p>
@@ -67,10 +45,10 @@ function setCheckedValue(radio_obj, new_value) {
             <div>
                    
             <h3>{{choice.candidate}}</h3>
-            <label for={{ choice.candidate }}><!-- com jquery, adicionar class="selected_candidate" ao clicar no label -->
+            <label for={{ choice.id }}><!-- com jquery, adicionar class="selected_candidate" ao clicar no label -->
                 <img src={{ choice.candidate_photo.url}} />
                 <!--input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"/-->
-                <input type="radio" name="vote_id" id="{{ choice.id }}" value="{{ choice.id }}" onClick="setCheckedValue(document.forms['radio_bbb'].elements['vote_id'], {{ choice.id }});" />
+                <input type="radio" name="vote_id" id="{{ choice.id }}" value="{{ choice.id }}" />
             </label>
 
             <p>Para eliminar o <strong>{{ choice.candidate }}</strong> pelo telefone disque <strong>0800-123-001</strong> ou mande um SMS para <strong>8002</strong></p>
